--- a/book.tex
+++ b/book.tex
@@ -60,16 +60,16 @@
 \tableofcontents
 
 \input{latex.out/acks}
-\input{latex.out/unix}
-\input{latex.out/first}
-\input{latex.out/mem}
-\input{latex.out/trap}
-\input{latex.out/interrupt}
-\input{latex.out/lock}
-\input{latex.out/sched}
-\input{latex.out/fs}
-\input{latex.out/lock2}
-\input{latex.out/sum}
+% \input{latex.out/unix}
+% \input{latex.out/first}
+% \input{latex.out/mem}
+% \input{latex.out/trap}
+% \input{latex.out/interrupt}
+% \input{latex.out/lock}
+% \input{latex.out/sched}
+% \input{latex.out/fs}
+% \input{latex.out/lock2}
+% \input{latex.out/sum}
 
 {
 % The following prevents latex from splitting a bibliography entry with a page
