--- a/unix.tex
+++ b/unix.tex
@@ -30,28 +30,20 @@
 большой общности и абстракции.
 
 Эта книга использует единственную операционную систему
-в качестве конкретного примера, чтобы проиллюстрировать
-концепции операционных систем.
+для иллюстации концепций операционных систем.
 Данная операционная система (xv6) предоставляет базовые интерфейсы,
-предложенные операционной системой Unix~\cite{unix}
+введеннные операционной системой Unix~\cite{unix}
 Кена Томпсона и Денниса Ритчи, а также имитирует внутреннее устройство Unix.
 Unix обеспечивает компактный интерфейс, механизмы которого
-удобно комбинируются, предоставляя поразительную общность. Этот интерфейс был настолько успешен, что современные операционные системы - BSD, Linux, macOS, Solaris и даже, в меньшей степени, Microsoft Windows - имеют похожие на Unix интерфейсы.
-Понимание xv6 - это хороший старт для понимания любой из этих систем и многих других.
+удобно комбинируются, предоставляя поразительную общность.
+Этот интерфейс был настолько успешен, что современные операционные системы -
+BSD, Linux, macOS, Solaris и даже, в меньшей степени, Microsoft Windows -
+имеют похожие на Unix интерфейсы.
+Понимание xv6 - это хороший старт для понимания
+любой из этих систем и многих других.
 
-This book uses a single operating system as a concrete example to
-illustrate operating system concepts.  That operating system,
-xv6, provides the basic interfaces introduced by Ken Thompson and
-Dennis Ritchie's Unix operating system~\cite{unix}, as well as mimicking Unix's
-internal design.  Unix provides a
-narrow interface whose mechanisms combine well, offering a surprising
-degree of generality.  This interface has been so successful that
-modern operating systems—BSD, Linux, macOS, Solaris, and even, to a
-lesser extent, Microsoft Windows—have Unix-like interfaces.
-Understanding xv6 is a good start toward understanding any of these
-systems and many others.
-
-Как показано на рисунке, xv6 имеет традиционную форму ядра, специальной программы, которая предоставляет сервисы работающим программам. Каждая работающая программа, называемая процессом, имеет память, содержащую инструкции, данные и стек. Инструкции реализуют вычисления программы. Данные - это переменные, над которыми выполняются вычисления. Стек организует вызовы процедур программы. На одном компьютере обычно работает много процессов, но только одно ядро.
+Как показано на рисунке, xv6 имеет традиционную форму ядра -
+специальной программы, которая предоставляет сервисы работающим программам. Каждая работающая программа, называемая процессом, имеет память, содержащую инструкции, данные и стек. Инструкции реализуют вычисления программы. Данные - это переменные, над которыми выполняются вычисления. Стек организует вызовы процедур программы. На одном компьютере обычно работает много процессов, но только одно ядро.
 
 As
 Figure~\ref{fig:os} shows,
