--- a/unix.tex
+++ b/unix.tex
@@ -1,49 +1,75 @@
 \chapter{Интерфейсы операционной системы}
 \label{CH:UNIX}
 
-Работа операционной системы заключается в разделении
-компьютера между несколькими программами и предоставлении
-более практичного набора сервисов, чем это обеспечивает
-аппаратное обеспечение в одиночку.
+Работа операционной системы
+\emph{(англ. operation system)} заключается
+в разделении компьютера между несколькими программами
+и предоставлении более практичного набора сервисов,
+чем это обеспечивает аппаратное обеспечение
+\empth{(англ. hardware)} в одиночку.
 Операционная система управляет и абстрагирует
 аппаратное обеспечение низкого уровня.
-Таким образом, например, текстовый процессор не должен
-беспокоиться о том, какой тип дискового оборудования используется.
-Операционная система разделяет аппаратное обеспечение
-между несколькими программами, чтобы они работали
-(или казались работающими) одновременно.
-Наконец, операционные системы предоставляют контролируемые способы
-взаимодействия программ, с помощью котоорых они могут
+Таким образом, например,
+текстовый процессор не должен беспокоиться о том,
+какой тип дискового оборудования используется.
+Операционная система разделяет
+аппаратное обеспечение между несколькими программами,
+чтобы они работали (или казались работающими) одновременно.
+Наконец, операционные системы предоставляют
+контролируемые способы взаимодействия программ,
+с помощью котоорых они могут
 обмениваться данными и работать вместе.
 
-Операционная система предоставляет сервисы пользовательским
-программам через интерфейс.
+Операционная система предоставляет сервисы
+пользовательским программам через интерфейс.
+\index{дизайн интерфейса}
 \index{interface design}
-И, оказывается, что разработка хорошего интерфейса является
-сложной задачей. С одной стороны, желательно, чтобы интерфейс был
-простым и компактным, потому что это облегчает правильную реализацию.
-С другой стороны, соблазнительно расширить функционал
-замудренными возможностями.
-Хитрость в разрешении этого противоречия заключается
-в разработке интерфейсов, которые базируются на нескольких простых
-механизмах, которые могут быть комбинированы для обеспечения
+И, оказывается, что разработка хорошего интерфейса
+является сложной задачей.
+С одной стороны, желательно,
+чтобы интерфейс был простым и компактным,
+потому что это облегчает правильную реализацию.
+С другой стороны, соблазнительно
+расширить функционал замудренными возможностями.
+Хитрость в разрешении этого противоречия
+заключается в разработке интерфейсов,
+которые базируются на нескольких простых механизмах,
+которые могут быть комбинированы для обеспечения
 большой общности и абстракции.
 
 Эта книга использует единственную операционную систему
 для иллюстации концепций операционных систем.
-Данная операционная система (xv6) предоставляет базовые интерфейсы,
+Данная операционная система (xv6)
+предоставляет базовые интерфейсы,
 введеннные операционной системой Unix~\cite{unix}
-Кена Томпсона и Денниса Ритчи, а также имитирует внутреннее устройство Unix.
-Unix обеспечивает компактный интерфейс, механизмы которого
-удобно комбинируются, предоставляя поразительную общность.
-Этот интерфейс был настолько успешен, что современные операционные системы -
-BSD, Linux, macOS, Solaris и даже, в меньшей степени, Microsoft Windows -
+Кена Томпсона и Денниса Ритчи,
+а также имитирует внутреннее устройство Unix.
+Unix обеспечивает компактный интерфейс,
+механизмы которого удобно комбинируются,
+предоставляя поразительную общность.
+Этот интерфейс был настолько успешен,
+что современные операционные системы -
+BSD, Linux, macOS, Solaris и даже,
+в меньшей степени, Microsoft Windows -
 имеют похожие на Unix интерфейсы.
 Понимание xv6 - это хороший старт для понимания
 любой из этих систем и многих других.
 
-Как показано на рисунке, xv6 имеет традиционную форму ядра -
-специальной программы, которая предоставляет сервисы работающим программам. Каждая работающая программа, называемая процессом, имеет память, содержащую инструкции, данные и стек. Инструкции реализуют вычисления программы. Данные - это переменные, над которыми выполняются вычисления. Стек организует вызовы процедур программы. На одном компьютере обычно работает много процессов, но только одно ядро.
+Как показано на рисунке~\ref{fig:os},
+xv6 имеет традиционную форму ядра \emph{(kernel)} -
+\indextext{ядра}
+\indextext{kernel}
+специальной программы, которая предоставляет
+обслуживание работающим программам.
+Каждая работающая программа называется процессом (process).
+\indextext{процесс}
+\indextext{process}
+У каждого процесса свои: память, содержащую инструкции, данные и стек.
+Инструкции реализуют вычисления программы. Данные - это переменные,
+над которыми выполняются вычисления.
+Стек организует вызовы процедур программы.
+На одном компьютере обычно работает много процессов,
+но только одно ядро ОС.
 
 As
 Figure~\ref{fig:os} shows,
